--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,42 @@
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["@typescript-eslint"],
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "prefer-const": 1,
+    "curly": 1,
+    "ordered-imports": [0],
+    "object-literal-sort-keys": [0],
+    "max-len": ["warn", { "code": 80, "ignoreComments": true }],
+    "new-parens": 1,
+    "no-bitwise": 1,
+    "no-cond-assign": 1,
+    "no-trailing-spaces": 0,
+    "eol-last": 1,
+    "func-style": [1, "declaration", { "allowArrowFunctions": true }],
+    "semi": 2,
+    "no-var": 1,
+    "no-new-object": 2,
+    "object-shorthand": 1,
+    "quote-props": ["warn", "as-needed"],
+    "no-array-constructor": 2,
+    "array-callback-return": 2,
+    "prefer-template": 1,
+    "template-curly-spacing": 1,
+    "no-eval": 2,
+    "no-useless-escape": 1,
+    "wrap-iife": 1,
+    "no-loop-func": 2,
+    "prefer-rest-params": 1,
+    "no-new-func": 2,
+    "space-before-blocks": 1,
+    "no-param-reassign": 2,
+    "prefer-spread": 1,
+    "function-paren-newline": 1,
+    "prefer-arrow-callback": 1,
+    "prefer-destructuring": 0,
+    "arrow-spacing": 1,
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "keyword-spacing": 1,
+    "no-new-wrappers": 2
+  }
 }
