--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
     "jest-environment-jsdom": "^28.0.2",
     "next": "12.1.5",
     "react": "18.1.0",
