feat: dynamic username page logic

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,12 @@
     "incremental": true,
     "baseUrl": "./"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "postcss.config.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "postcss.config.js",
+    "__tests__/commo.test.js"
+  ],
   "exclude": ["node_modules"]
 }
